--- a/Datasets.ipynb
+++ b/Datasets.ipynb
@@ -35,7 +35,7 @@
    },
    "outputs": [],
    "source": [
-    "with open(f'{file_dir}/wikipedia-movies.json', mode='r') as file:\n",
+    "with open(f'{file_dir}/Resources/wikipedia-movies.json', mode='r') as file:\n",
     "    wiki_movies_raw = json.load(file)"
    ]
   },
@@ -7771,10 +7771,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "63d71638",
+   "execution_count": 120,
+   "id": "2455b021",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "importing rows 0 to 1000000...Done. 28.427104473114014 total seconds elapsed\n",
+      "importing rows 1000000 to 2000000...Done. 54.921857595443726 total seconds elapsed\n",
+      "importing rows 2000000 to 3000000...Done. 81.11425471305847 total seconds elapsed\n",
+      "importing rows 3000000 to 4000000...Done. 107.3376190662384 total seconds elapsed\n",
+      "importing rows 4000000 to 5000000...Done. 134.49180841445923 total seconds elapsed\n",
+      "importing rows 5000000 to 6000000...Done. 161.02998971939087 total seconds elapsed\n",
+      "importing rows 6000000 to 7000000...Done. 187.1605749130249 total seconds elapsed\n",
+      "importing rows 7000000 to 8000000...Done. 213.45092105865479 total seconds elapsed\n",
+      "importing rows 8000000 to 9000000...Done. 239.43355417251587 total seconds elapsed\n",
+      "importing rows 9000000 to 10000000...Done. 265.29300475120544 total seconds elapsed\n",
+      "importing rows 10000000 to 11000000...Done. 291.6747417449951 total seconds elapsed\n",
+      "importing rows 11000000 to 12000000...Done. 317.3291721343994 total seconds elapsed\n",
+      "importing rows 12000000 to 13000000...Done. 343.76725721359253 total seconds elapsed\n",
+      "importing rows 13000000 to 14000000...Done. 369.4719605445862 total seconds elapsed\n",
+      "importing rows 14000000 to 15000000...Done. 397.5186529159546 total seconds elapsed\n",
+      "importing rows 15000000 to 16000000...Done. 425.1972825527191 total seconds elapsed\n",
+      "importing rows 16000000 to 17000000...Done. 453.0030598640442 total seconds elapsed\n",
+      "importing rows 17000000 to 18000000...Done. 477.7278702259064 total seconds elapsed\n",
+      "importing rows 18000000 to 19000000...Done. 503.29083490371704 total seconds elapsed\n",
+      "importing rows 19000000 to 20000000...Done. 533.4129414558411 total seconds elapsed\n",
+      "importing rows 20000000 to 21000000...Done. 561.430965423584 total seconds elapsed\n",
+      "importing rows 21000000 to 22000000...Done. 587.5512845516205 total seconds elapsed\n",
+      "importing rows 22000000 to 23000000...Done. 617.784196138382 total seconds elapsed\n",
+      "importing rows 23000000 to 24000000...Done. 645.4564061164856 total seconds elapsed\n",
+      "importing rows 24000000 to 25000000...Done. 671.7187609672546 total seconds elapsed\n",
+      "importing rows 25000000 to 26000000...Done. 701.3654084205627 total seconds elapsed\n",
+      "importing rows 26000000 to 26024289...Done. 701.9782819747925 total seconds elapsed\n"
+     ]
+    }
+   ],
    "source": [
     "# Create a variable for the number of rows imported\n",
     "\n",
@@ -7784,7 +7818,7 @@
     "\n",
     "start_time = time.time()\n",
     "\n",
-    "for data in pd.read_csv(f'{file_dir}ratings.csv', chunksize=1000000):\n",
+    "for data in pd.read_csv(f'{file_dir}/Resources/ratings.csv', chunksize=1000000):\n",
     "    \n",
     "    # print out the range of rows that are being imported\n",
     "    \n",
@@ -7800,6 +7834,14 @@
     "    \n",
     "    print(f'Done. {time.time() - start_time} total seconds elapsed')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "60dcd320",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
